# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "prosidy-ast"
version = "0.2.0"
authors = ["Alex Feldman-Crough <alex@fldcr.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
derive_more = "0.15"
lazy_static = "1.4"
weak-table = "0.2"
serde-value = "0.6"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
serde_json = "1.0"
pretty_assertions = "0.6"
