# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "prosidy-cli"
version = "0.4.0"
authors = ["Alex Feldman-Crough <alex@fldcr.com>"]
edition = "2018"
license = "MPL-2.0"

[[bin]]
name = "prosidy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = "2.33"
env_logger = "0.7"
log = "0.4"
thiserror = "1.0"

# Serialization dependencies
serde = "1.0"
serde_json = "1.0"
serde_cbor = "0.10"

# Server dependencies
lazy_static = { version = "1.4", optional = true }
mime = { version = "0.3", optional = true }
futures-preview = { version="=0.3.0-alpha.19", optional = true }
tokio = { version = "=0.2.0-alpha.6", optional = true }
tokio-fs = { version = "=0.2.0-alpha.6", optional = true }
hyper = { version = "=0.13.0-alpha.4", optional = true }
base64 = "0.11"
sha2 = "0.8"

[dependencies.phf]
version = "0.8"
features = ["macros"]
optional = true

[dependencies.prosidy]
path = "../prosidy"

[features]
default = ["async"]
async = ["hyper", "mime", "tokio", "tokio-fs", "lazy_static", "futures-preview", "phf"]
